[gd_scene load_steps=10 format=3 uid="uid://cjbbsi4ox7ra"]

[ext_resource type="Script" path="res://scripts/unit/unit.gd" id="1_mk4yb"]
[ext_resource type="PackedScene" uid="uid://c3nkk1d2atvg0" path="res://scenes/unit/Components/unit_sprite.tscn" id="2_yynbu"]
[ext_resource type="PackedScene" uid="uid://2r4vdygi7knt" path="res://scenes/unit/Components/stats.tscn" id="4_lv5xv"]
[ext_resource type="PackedScene" uid="uid://bujj6lvmg51bg" path="res://scenes/equipment/Prefabs/bow.tscn" id="5_52yoq"]
[ext_resource type="PackedScene" uid="uid://dpsoty2c27o2p" path="res://scenes/unit/Components/inventory.tscn" id="5_ewj0o"]
[ext_resource type="Script" path="res://scripts/unit/Components/skills.gd" id="6_mi00o"]
[ext_resource type="Script" path="res://scripts/unit/Skills/weapon_attack.gd" id="7_fe8tt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_am2qc"]
size = Vector2(16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hyoqa"]
bg_color = Color(1, 0, 0, 1)

[node name="Ranger" type="CharacterBody2D"]
input_pickable = true
motion_mode = 1
script = ExtResource("1_mk4yb")
unit_type = 1
metadata/_edit_horizontal_guides_ = [-8.0, 8.0]
metadata/_edit_vertical_guides_ = [-8.0, 8.0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_am2qc")

[node name="UnitSprite" parent="." instance=ExtResource("2_yynbu")]

[node name="Stats" parent="." instance=ExtResource("4_lv5xv")]

[node name="Inventory" parent="." node_paths=PackedStringArray("equipted_weapon") instance=ExtResource("5_ewj0o")]
equipted_weapon = NodePath("Bow")

[node name="Bow" parent="Inventory" instance=ExtResource("5_52yoq")]
damage = 2

[node name="Skills" type="Node" parent="."]
script = ExtResource("6_mi00o")

[node name="WeaponAttack" type="Node" parent="Skills"]
script = ExtResource("7_fe8tt")
target = 1

[node name="HealthBar" type="ProgressBar" parent="."]
offset_top = 16.0
offset_right = 16.0
offset_bottom = 20.0
theme_override_styles/fill = SubResource("StyleBoxFlat_hyoqa")
max_value = 5.0
step = 1.0
value = 5.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
